stylesheets/_component.forms.scss
/* ... */
.form__group--partial-state {
    &.has-changed {
        @include form__group-partial-validation($state-info-text, color(info));
    }

    &.has-warning {
        @include form__group-partial-validation($state-warning-text, color(warning));
    }

    &.has-error {
        @include form__group-partial-validation($state-danger-text, color(danger));
    }

    &.has-success {
        @include form__group-partial-validation($state-success-text, color(success));
    }
}

.form__control {
    &.has-changed {
        @include form__control-validation($state-info-text, color(info), $state-info-bg);
    }

    &.has-warning {
        @include form__control-validation($state-warning-text, color(warning), $state-warning-bg);
    }

    &.has-error {
        @include form__control-validation($state-danger-text, color(danger), $state-danger-bg);
    }

    &.has-success {
        @include form__control-validation($state-success-text, color(success), $state-success-bg);
    }
}

.help-block {
    clear: both;
    color: color(text, help);
    display: block;
    font-size: $font-size-small;
}

// if a control label is in the help block (like a bare input) it doesn't need
// the extra padding
.help-block > .control__label {
    padding: 0;
}

// if help block is next to the main label, space it appropriately
.form__group > .control__label + .help-block {
    margin: -.5em 0 .5em;
}

.form__button-group {

    > .control__label {
        padding-top: 3px;
    }

    .controls > .control__label {
        @extend .btn;
    }

    .controls > .control__label:not(:first-of-type) {
        margin-left: -1px;
    }

    // Position elements outside of the container as display:none or
    // visibility:hidden causes the inputs to stop being interactive in IE8
    .form__control {
        left: -9999px;
        position: absolute;
        top: 0;
    }

    .form__control:checked + .control__label {
        @extend .btn:active;
    }

    .btn__group {
        vertical-align: top;
    }
}

// Loading spinner (mainly for select/select2 elements)
.form__control + .loading {
  left: 310px;
}

// Paragraph as first child of .controls, assuming absence of a proper input
.controls > p:first-child {
    margin-bottom: 0;
    min-height: 44px;
    padding-top: 12px;
}

.required-indicator {
    display: inline-block;
    font-size: 1.2em;
    text-align: center;
    width: 10px;
}

.form__group.form-checkbox .form__control.checkbox,
.form__group.form-radio .form__control.radio {
    // margin-top: 17px;
}

.form__control.checkbox,
.form__control.radio {
    appearance: none;
    background-color: #fafafa;
    border: 0;
    box-shadow: inset 0 0 0 1px color(border);
    height: 20px;
    position: relative;
    width: 20px;

    .controls {
        padding: 12px 0 16px;
    }

    &:focus {
        border-color: color(primary);
        box-shadow: 0 0 0 2px color(primary);
    }

    &::before {
        content: '';
        font-family: 'FontAwesome';
        height: 20px;
        left: 2px;
        position: absolute;
        top: -14px;
    }

    &:focus:checked::before {
        color: color(primary);
    }

    &:checked::before {
        color: color(text);
        content: '\f00c';
    }
}

.form__control.radio {
    border-radius: 20px;

    &:checked::before {
        content: '\f111';
        font-size: 13.5px;
        left: 3.9px;
    }
}

// Make sure checkboxes and radios reduce the label's clickable area to the
// width of the label only
.form-checkbox-inline,
.form-radio-inline {
    > .controls {
        margin-left: 0; // remove gutter
        width: 100%;
    }

    > .controls > .control__label {
        display: inline-block;
        width: 100%;
    }

    // .control__label > .form__control {
    //     width: auto;
    // }
}

.form-choice {
    > .controls > .control__label {
        clear: left;
        float: left;
    }
}

// disabled checkbox/radio inputs within a choice helper should have their label
// look visually disabled too (the main label for the entire choice still uses
// normal text colour)
.is-disabled + .form-choice__label {
    color: color(text, disabled);
}

.form__indent {
    margin-left: 25%;
    margin-right: $gutter-width;

    p {
        margin-left: 0;
        padding-left: 0;
    }
}

.form-range .form__control {
    @extend %range-slider;
}

.form-range > .controls .form__control {
    background-color: transparent;
    height: 48px;
    padding: 0;
}

.form-range .input-group-addon:first-child,
.form-range .input-group-addon:last-child {
    border: 1px solid color(border);
    border-radius: $border-radius;
}

.form-range .input-group .form__control {
    padding-left: 0;
    padding-right: $gutter-width;
}

.form-range .input-group > .input-group-addon + .form__control {
    padding-left: $gutter-width;
    padding-right: $gutter-width;
}

.form-range .input-group > .form__control:last-child {
    padding-right: 0;
}

// undo default fieldset padding
fieldset.form__group--compound {
    padding: 0;
}
/* ... */

